@@ -1,3 +1,12 @@
+2024-09-09 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCval.c,
+	  src/pic14/main.c,
+	  src/pic16/main.c,
+	  src/stm8/gen.c,
+	  src/z80/gen.c:
+	  Operator priority fixes from patch #474.
+
 2024-09-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/ports/ez80-z80/spec.mk,
